added max, included some tests, i have some issues with last index included/excluded

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,5 @@ add_executable(TimelineIndex main.cpp
         VersionMap.cpp
         TemporalTable.h
         TimelineIndex.cpp
-        TemporalTable.cpp)
+        TemporalTable.cpp
+        TempTableTesting.cpp)
