restructuring of EventList, needs to support double Temporal Table references

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,6 @@ add_executable(TimelineIndex main.cpp
         TemporalTable.h
         TimelineIndex.cpp
         TemporalTable.cpp
-        TempTableTesting.cpp)
+        TempTableTesting.cpp
+        EventListChildren.h
+)
