commiting before implementing own dynamic_bitset and restructuring test cases to be nicer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,5 @@ add_executable(TimelineIndex main.cpp
         TemporalTable.cpp
         TempTableTesting.cpp
         EventListChildren.h
+        setup.cpp
 )
